--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,11 +14,11 @@
             {%- else -%}
               {{ site.title | escape }}
             {%- endif -%}
-            </li> -->
+            </li> 
             {%- if site.wiki_url -%}
             <li><a class="u-url" href="{{ site.wiki_url | relative_url }}">See the ZiptieAI wiki for tech details!</a></li>
 
-            {%- endif -%}
+            {%- endif -%}-->
             {%- if site.email -%}
             <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li> 
             {%- endif -%}
